css/style1b26.css
/* ... */
 .content-banner-txt.lead-p p:first-child {
     font-size: 26px;
     line-height: 1.6;
     color: var(--grey-color);
}
 .content-banner-txt ul {
     color: var(--grey-color);
     margin-left: 0;
     padding-left: 16px;
}
 .banner-blk-img.neg-margin img {
     margin-top: -96px;
     margin-bottom: -96px;
     margin-top: -120px;
     margin-bottom: -120px;
}
 #content-1 {
     padding-bottom: 96px;
}
 .banner-img-cols {
     background: var(--main-color);
     color: var(--white-color);
}
 #content-1 .banner-blk-txt.banner-txt-sm, #content-2 .banner-blk-txt.banner-txt-sm {
     align-self: flex-start;
}
 #content-2 {
     padding-bottom: 0;
}
 .banner-img-blocks {
     position: relative;
     display: flex;
     width: 100%;
     padding: 0px 0px;
     align-content: flex-start;
     align-self: center;
     flex-direction: row;
     flex-wrap: wrap;
}
 .banner-blk-img-wrap {
     position: relative;
     display: flex;
     align-self: flex-start;
    /* vertical-align: top;
    */
     padding: 0 48px;
     width: 50%;
     opacity: 0;
}
 .animate .banner-blk-img-wrap {
     -webkit-animation: btm-fade-animate 0.6s ease-out forwards;
     animation: btm-fade-animate 0.6s ease-out forwards;
}
 .banner-img-blocks .banner-blk-img-wrap:nth-child(1) {
     -webkit-animation-delay: 0.2s;
     animation-delay: 0.2s;
}
 .banner-img-blocks .banner-blk-img-wrap:nth-child(2) {
     -webkit-animation-delay: 0.4s;
     animation-delay: 0.4s;
}
 .banner-img-blocks .banner-blk-img-wrap:nth-child(3) {
     -webkit-animation-delay: 0.6s;
     animation-delay: 0.6s;
}
 .banner-img-blocks .banner-blk-img-wrap:nth-child(4) {
     -webkit-animation-delay: 0.8s;
     animation-delay: 0.8s;
}
 .banner-img-blk {
     position: relative;
     display: flex;
     flex-direction: column;
     height: 100%;
     margin-bottom: 48px;
}
 .banner-img-blk-img {
     position: relative;
     display: block;
     text-align: center;
     margin-bottom: 24px;
}
 .banner-img-blk-img span {
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
     width: 80px;
     height: 80px;
     font-size: 32px;
     border-radius: 50%;
     color: var(--sub-color);
     background: var(--shadow-color);
}
 .banner-img-blk-img img {
     height: 120px;
     width: auto;
}
 .banner-img-blk-txt {
     display: flex;
     flex-direction: column;
     height: 70%;
}
 .banner-img-blk-txt p:last-child {
     margin-top: auto;
}
 .banner-img-blk-txt h3 span {
     font-weight: 300;
}
 #content-2 .banner-blk-img-wrap {
     opacity: 1;
     animation: none!important;
}
 #content-team {
     color: var(--white-color);
     padding-bottom: 48px;
}
 .home-banner-dark .content-banner-txt.lead-p p:first-child {
     color: var(--white-color);
}
 .home-banner-light {
     background: var(--light-color);
}
 #content-3 .banner-blk-txt, #content-4 .banner-blk-txt, #content-5 .banner-blk-txt, #content-3 .banner-blk-img, #content-4 .banner-blk-img, #content-5 .banner-blk-img {
     opacity: 0;
}
 #content-3.animate .banner-blk-txt, #content-4.animate .banner-blk-txt, #content-5.animate .banner-blk-txt {
     -webkit-animation: btm-fade-animate 0.8s ease-out forwards;
     animation: btm-fade-animate 0.8s ease-out forwards;
}
 #content-3.animate .banner-blk-img, #content-5.animate .banner-blk-img {
     -webkit-animation: left-in-animate 0.8s ease-out forwards;
     animation: left-in-animate 0.8s ease-out forwards;
}
 #content-4.animate .banner-blk-img {
     -webkit-animation: right-in-animate 0.8s ease-out forwards;
     animation: right-in-animate 0.8s ease-out forwards;
}
/* CONTENT STYLES *****************************/
 #content-bottom {
     position: relative;
     color: var(--white-color);
     background: var(--main-color);
     background: url(../images/logo-background.svg) left top no-repeat var(--main-color);
     background-size: 64%;
     background-position: -100% 0%;
}
 .content-banner.content-banner-center {
     flex-direction: column;
}
 .content-banner-center .content-banner-title {
     margin-bottom: 16px;
}
 .content-banner-center .banner-blk-txt {
     width: 100%;
     text-align: center;
     padding: 0px 96px;
     padding: 0px 20%;
}
 .content-banner-title-icon {
     text-align: center;
     color: var(--sub-color);
     font-size: 90px;
     margin-bottom: 24px;
}
 .content-banner-center .banner-blk-img {
     margin-top: 48px;
     width: 30%;
     text-align: center;
}
 .content-banner-center .banner-blk-img img {
     position: relative;
     display: inline-block;
     height: 48px;
     width: auto;
     margin: 0 auto;
}
 .content-banner-center-block {
     margin-top: 48px;
     text-align: center;
}
 .content-center {
     position: relative;
     display: block;
     text-align: center;
     padding-left: 40px;
     padding-right: 40px;
    /* padding: 0px 40px; */
     /* padding: 0px 10%; */
 
     margin-bottom: var(--lg-pad);
}

/* .banner-wrapper #innovation-stack{
    padding: -10px 0px !important;
} */
 .content-top-center .content-center {
     padding: 0;
}
 .content-center-title {
     position: relative;
     text-align: center;
     display: inline-block;
     width: 70%;
}
 .content-center-title h2 {
     margin-bottom: 0px;
}
 #content-banner-icons.content-banner-wrap {
     padding: 144px 0;
}
 #content-banner-icons .content-banner-center {
     margin-bottom: var(--lg-pad);
}
 .content-banner-icons {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin-left: -16px;
     margin-right: -16px;
}
 .content-banner-icons ul {
     position: relative;
     display: flex;
     list-style: none;
     margin: 0px;
     padding: 0px;
     text-align: center;
}
 .content-banner-icons ul li{
     display: flex;
     margin: 0px;
     padding: 0px 48px;
}
 .content-banner-icons ul li img {
     height: 96px;
}
 .banner-icon-blk {
     position: relative;
     display: flex;
     padding: 0 var(--mid-pad);
     opacity: 0;
}
/* ... */

